--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-floating-whatsapp": "^5.0.8",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.22.3",
+    "react-social-media-embed": "^2.5.13",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
